# hmodel-cpp-public

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/cuda_thrust_helloworld/: CMakeLists.txt  CMakeLists2.txt  main.cu
apps/cuda_thrust_sort/: CMakeLists.txt  main.cu
apps/helloworld_qglviewer/: CMakeLists.txt  main.cpp
apps/hmodel_atb/: CMakeLists.txt  main.cpp
cmake/: ConfigureCUDA.cmake  ConfigureCeres.cmake  ConfigureCompiler.cmake  ConfigureRealSense.cmake
cudax/: PixelIndexer.h  externs.h  helper_cuda.h  kernel.cu  kernel.h  kernel_debug.h  kernel_init.h  kernel_upload.h
cudax/functors/: ComputeJacobianData.h  ComputeJacobianRow.h  ComputeJacobianSilhouette.h  CorrespondencesFinder.h  IsSilhouette.h
data/models/anastasia/: B.txt  C.txt  I.txt  R.txt
data/pose_space/: mu
data/pose_space/fingers/: Limits  P  Sigma
data/pose_space/thumb/: Limits  P  Sigma
data/shaders/: model_FB_fshader.glsl  model_fshader.glsl
tracker/: CMakeLists.txt  ForwardDeclarations.h  GLWidget.cpp  GLWidget.h  Tracker.h  Types.h  Worker.cpp  Worker.h
tracker/Data/: Camera.cpp  DataFrame.h  DataStream.cpp  DataStream.h  SolutionStream.h
tracker/Detection/: DetectionStream.h  FindFingers.cpp  QianDetection.cpp  QianDetection.h  TrivialDetector.cpp  TrivialDetector.h
tracker/Energy/: Collision.cpp  Collision.h  Damping.cpp  Damping.h  Energy.h  Fitting.cpp  Fitting.h  JointLimits.cpp  JointLimits.h  PoseSpace.cpp  PoseSpace.h  Temporal.cpp  Temporal.h
tracker/Energy/Fitting/: OnlinePerformanceMetrics.h  Settings.h  TrackingMonitor.h
tracker/HModel/: DataLoader.h  GeometryHelpers.h  Model.cpp  Model.h  ModelSemantics.cpp  ModelSemantics.h  ModelSerializer.cpp  ModelSerializer.h  OutlineFinder.cpp  OutlineFinder.h
tracker/HandFinder/: HandFinder.cpp  HandFinder.h
tracker/OpenGL/: CustomFrameBuffer.cpp  CustomFrameBuffer.h  GeometricPrimitiveRenderer.cpp  GeometricPrimitiveRenderer.h  OffscreenRenderer.cpp  OffscreenRenderer.h
tracker/OpenGL/ConvolutionRenderer/: ConvolutionRenderer.cpp  ConvolutionRenderer.h  data_points_fshader.glsl  data_points_vshader.glsl  lines_fshader.glsl  model_points_fshader.glsl  model_rastorizer_fshader.glsl  model_vshader.glsl  outside_points_fshader.glsl
tracker/OpenGL/DebugRenderer/: ArcRenderer.cpp  ArcRenderer.h  DebugRenderer.cpp  DebugRenderer.h  PointRenderer.cpp  PointRenderer.h  SegmentRenderer.cpp  SegmentRenderer.h
tracker/OpenGL/KinectDataRenderer/: KinectDataRenderer.cpp  KinectDataRenderer.h  KinectDataRenderer_fshader.glsl  KinectDataRenderer_vshader.glsl
tracker/Sensor/: Sensor.h  Sensor_realsense.cpp
util/: MathUtils.cpp  qDebug_helpers.h  qfile_helper.h
